@@ -2,7 +2,7 @@
 use v5.10;
 use feature 'say';
 
-# Do not edit this file - Generated by Perlito5 9.018
+# Do not edit this file - Generated by Perlito5 9.019
 
 {
     package main;
@@ -14959,7 +14959,9 @@ use feature 'say';
                     $Java_class->{'Float'} = {'java_type' => 'Float', 'java_native_to_perl' => 'PlDouble', 'perl_to_java' => 'to_float', 'perl_package' => 'Float'};
                     $Java_class->{'Character'} = {'java_type' => 'Character', 'java_native_to_perl' => 'PlString', 'perl_to_java' => 'to_character', 'perl_package' => 'Character'};
                     $Java_class->{'long'} = {'java_type' => 'long', 'java_native_to_perl' => 'PlInt', 'perl_to_java' => 'to_long', 'perl_package' => 'long'};
-                    $Java_class->{'int'} = {'java_type' => 'int', 'java_native_to_perl' => 'PlInt', 'perl_to_java' => 'to_long', 'perl_package' => 'int'}
+                    $Java_class->{'int'} = {'java_type' => 'int', 'java_native_to_perl' => 'PlInt', 'perl_to_java' => 'to_long', 'perl_package' => 'int'};
+                    $Java_class->{'short'} = {'java_type' => 'short', 'java_native_to_perl' => 'PlInt', 'perl_to_java' => 'to_long', 'perl_package' => 'short'};
+                    $Java_class->{'byte'} = {'java_type' => 'byte', 'java_native_to_perl' => 'PlInt', 'perl_to_java' => 'to_long', 'perl_package' => 'byte'}
                 }
                 our %Java_loop_label;
                 sub Perlito5::Java::get_java_loop_label {
